<resources>
    <string name="app_name">CrossFit App</string>
    <string name="your_workouts">Your Workouts</string>
    <string name="binacle">Binacle</string>
    <string name="movement_guide">Movement Guide</string>
    <string name="logo">logo</string>
    <string name="Statistics">Statistics</string>
    <string name="empty"> </string>
    <string name="Workouts">WORKOUTS</string>
    <string name="AirSquat">Air Squat</string>
    <string name="FrontSquat">Front Squat</string>
    <string name="front_squat">Front Squad</string>
    <string name="OverheadSquat">Overhead Squat</string>
    <string name="ShoulderPress">Shoulder Press</string>
    <string name="PushPress">Push Press</string>
    <string name="PushJerk">Push Jerk</string>
    <string name="DeadLift">Deadlift</string>
    <string name="ExerciseVideo">exercise_video</string>
    <string name="get_time">GET TIME</string>
    <string name="hour_min">Hour : Min</string>
    <string name="get_date">GET DATE</string>
    <string name="date">Date</string>
    <string name="comments">COMMENTS</string>
    <string name="write_your_session_comments">Write your session comments</string>
    <string name="submit">SUBMIT</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
    <string name="return_to_main_menu">Return to Main Menu</string>
    <string name="go_to_all_entries">GO TO ALL ENTRIES</string>
    <string name="selected_entries">Selected Entries</string>
    <string name="get_entries">Get Entries</string>
    <string name="show_entries">Show entries</string>
    <string name="binnacle">Binnacle</string>
    <string name="go_to_data_show">Go to Data Show</string>
    <string name="home_logo">home_logo</string>
    <string name="return_to_exercises">return to Exercises</string>
    <string name="movement_list">Movement List</string>
    <string name="time">Time</string>
    <string name="Exercises">Exercises</string>
    <string name="aqu_se_ponen_los_ejercicios_hechos">aquí se ponen los ejercicios hechos</string>
    <string name="commentsMin">Comments</string>
    <string name="return_to_all_entries">Return to all entries</string>
</resources>