<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/logo_view"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/crossfit_app_logos_white" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <EditText
        android:id="@+id/Time"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:autoSizeTextType="uniform"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/hour_min"
        android:importantForAutofill="no"
        android:inputType="text"
        android:longClickable="false"
        android:text="@string/empty"
        android:textColor="#000000"
        android:textColorHint="#99000000"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toStartOf="@+id/guideline23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline13"
        tools:targetApi="o" />

    <Button
        android:id="@+id/getTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/get_time"
        android:layout_margin="10dp"
        android:autoSizeTextType="uniform"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toTopOf="@+id/guideline13"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/actualD."
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:autoSizeTextType="uniform"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/date"
        android:importantForAutofill="no"
        android:inputType="text"
        android:longClickable="false"
        android:text="@string/empty"
        android:textColorHint="#99000000"
        app:layout_constraintBottom_toTopOf="@+id/guideline22"
        app:layout_constraintEnd_toStartOf="@+id/guideline23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline18"
        tools:targetApi="o" />

    <Button
        android:id="@+id/getDate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/get_date"
        android:layout_margin="10dp"
        android:autoSizeTextType="uniform"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toTopOf="@+id/guideline18"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/comments"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:autoSizeMaxTextSize="42sp"
        android:autoSizeTextType="uniform"
        android:background="@color/cardview_shadow_start_color"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/write_your_session_comments"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/empty"
        android:textColor="#000000"
        android:textColorHint="#99000000"
        app:layout_constraintBottom_toTopOf="@+id/guideline30"
        app:layout_constraintEnd_toStartOf="@+id/guideline23"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline24"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/comments"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline24"
        app:layout_constraintEnd_toStartOf="@+id/guideline23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline22"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/Workouts"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toTopOf="@+id/guideline22"
        tools:targetApi="o" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.625"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <Button
        android:id="@+id/Submit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/submit"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="36sp"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline30"
        tools:targetApi="o" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="7"
        android:layout_margin="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toTopOf="@+id/guideline24">

        <CheckBox
            android:id="@+id/AirSquatCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textAlignment="center"
            android:layout_gravity="center"
            tools:targetApi="o"
            android:text="@string/AirSquat" />

        <CheckBox
            android:id="@+id/FrontSquatCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textAlignment="center"
            android:layout_gravity="center"
            tools:targetApi="o"
            android:text="@string/FrontSquat" />

        <CheckBox
            android:id="@+id/OverheadSquatCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textAlignment="center"
            android:layout_gravity="center"
            tools:targetApi="o"
            android:text="@string/OverheadSquat" />

        <CheckBox
            android:id="@+id/ShoulderPressCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textAlignment="center"
            android:layout_gravity="center"
            tools:targetApi="o"
            android:text="@string/ShoulderPress" />

        <CheckBox
            android:id="@+id/PushPressCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textAlignment="center"
            android:layout_gravity="center"
            tools:targetApi="o"
            android:text="@string/PushPress" />

        <CheckBox
            android:id="@+id/PushJerkCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textAlignment="center"
            android:layout_gravity="center"
            tools:targetApi="o"
            android:text="@string/PushJerk" />

        <CheckBox
            android:id="@+id/DeadliftCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textAlignment="center"
            android:layout_gravity="center"
            tools:targetApi="o"
            android:text="@string/DeadLift" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>