<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/Home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/logo_view"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/crossfit_app_logos_white" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline42"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical|fill_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="56dp"
                android:autoSizeMinTextSize="12dp"
                android:autoSizeTextType="uniform"
                android:gravity="center|center_vertical"
                android:text="@string/Workouts"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="36sp"
                tools:targetApi="o" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center|fill_horizontal|center_vertical"
                android:orientation="horizontal"
                android:padding="20dp"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/AirSquat"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_vertical"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="32sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeTextType="uniform"
                    android:background="@drawable/airsquat"
                    android:text="@string/AirSquat"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:targetApi="o" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/FrontSquat"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="32sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeTextType="uniform"
                    android:background="@drawable/frontsquat"
                    android:text="@string/FrontSquat"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:targetApi="o" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center|fill_horizontal|center_vertical"
                android:orientation="horizontal"
                android:padding="20dp"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/OverheadSquat"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_vertical"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="32sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeTextType="uniform"
                    android:background="@drawable/overheadsquat"
                    android:text="@string/OverheadSquat"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:targetApi="o" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ShoulderPress"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="32sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeTextType="uniform"
                    android:background="@drawable/shoulderpress"
                    android:text="@string/ShoulderPress"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:targetApi="o" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center|fill_horizontal|center_vertical"
                android:orientation="horizontal"
                android:padding="20dp"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/PushPress"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_vertical"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="32sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeTextType="uniform"
                    android:background="@drawable/pushpress"
                    android:text="@string/PushPress"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:targetApi="o" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/PushJerk"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="32sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeTextType="uniform"
                    android:background="@drawable/pushjerk"
                    android:text="@string/PushJerk"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:targetApi="o" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Deadlift"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_gravity="center|center_vertical"
                android:layout_marginHorizontal="120dp"
                android:layout_marginTop="20dp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/deadlift"
                android:padding="35dp"
                android:text="@string/DeadLift"
                android:textAlignment="center"
                android:textColor="@color/white"
                tools:targetApi="o" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/goToMainMenu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        android:contentDescription="@string/home_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline42"
        app:layout_constraintWidth_percent="0.375"
        app:srcCompat="@drawable/logo_home" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.175" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9
"/>

</androidx.constraintlayout.widget.ConstraintLayout>